flux/apps/int/copyparty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  labels:
    app.kubernetes.io/name: copyparty
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: copyparty
  template:
    metadata:
      labels:
        app.kubernetes.io/name: copyparty
    spec:
      containers:
        - name: copyparty
          image: copyparty/ac:1.20.23
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /cfg
            - name: copyparty-users
              mountPath:  /cfg/users-database.conf
              subPath: users-database.conf
              readOnly: true
            - name: copyparty-config
              mountPath: /cfg/config.conf
              subPath: config.conf
              readOnly: true
            - name: downloads
              mountPath: /srv/downloads
            - name: music
              mountPath: /srv/music
            - name: movies
              mountPath: /srv/movies
            - name: private
              mountPath: /srv/private
            - name: tvs
              mountPath: /srv/tvs
            - name: games
              mountPath: /srv/games
            - name: videos
              mountPath: /srv/videos
            - name: special
              mountPath: /srv/special
            - name: books
              mountPath: /srv/books
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "6Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: copyparty-users
          configMap:
            name: copyparty-users
            items:
              - key: users-database.conf
                path: users-database.conf
        - name: copyparty-config
          configMap:
            name: copyparty-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: music
          persistentVolumeClaim:
            claimName: music-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
        - name: private
          persistentVolumeClaim:
            claimName: private-pvc
        - name: tvs
          persistentVolumeClaim:
            claimName: tvs-pvc
        - name: games
          persistentVolumeClaim:
            claimName: games-pvc
        - name: videos
          persistentVolumeClaim:
            claimName: videos-pvc
        - name: special
          persistentVolumeClaim:
            claimName: special-pvc
        - name: books
          persistentVolumeClaim:
            claimName: books-pvc
