flux/apps/int/copyparty/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: copyparty
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
